--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -13,8 +13,8 @@ PASSPHRASE=MYPASSPHRASE # Passphrase used to create encryption key
 # DATABASE_PASSWORD=""
 # OVERRIDE_DATABASE=true
 
-# FLOWISE_USERNAME=user
-# FLOWISE_PASSWORD=1234
+# CRIAI_USERNAME=user
+# CRIAI_PASSWORD=1234
 # DEBUG=true
 # LOG_LEVEL=debug (error | warn | info | verbose | debug)
 # TOOL_FUNCTION_BUILTIN_DEP=crypto,fs
