--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,8 +16,8 @@
         "@mui/x-data-grid": "^6.8.0",
         "@tabler/icons": "^1.39.1",
         "clsx": "^1.1.1",
-        "flowise-embed": "*",
-        "flowise-embed-react": "*",
+        "criai-chat-embed": "*",
+        "criai-chat-embed-react": "^1.0.2",
         "flowise-react-json-view": "*",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
