--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "flowise",
+    "name": "chatflow",
     "version": "1.3.4",
     "private": true,
-    "homepage": "https://flowiseai.com",
+    "homepage": "https://chatai.com.br",
     "workspaces": [
         "packages/*",
         "flowise",
