--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
-DATABASE_PATH=/root/.flowise
-APIKEY_PATH=/root/.flowise
-SECRETKEY_PATH=/root/.flowise
-LOG_PATH=/root/.flowise/logs
-BLOB_STORAGE_PATH=/root/.flowise/storage
+DATABASE_PATH=/root/.criai
+APIKEY_PATH=/root/.criai
+SECRETKEY_PATH=/root/.criai
+LOG_PATH=/root/.criai/logs
+BLOB_STORAGE_PATH=/root/.criai/storage
 
 # CORS_ORIGINS="*"
 # IFRAME_ORIGINS="*"
@@ -13,7 +13,7 @@ BLOB_STORAGE_PATH=/root/.flowise/storage
 # DATABASE_TYPE=postgres
 # DATABASE_PORT=""
 # DATABASE_HOST=""
-# DATABASE_NAME="flowise"
+# DATABASE_NAME="criai"
 # DATABASE_USER=""
 # DATABASE_PASSWORD=""
 # DATABASE_SSL=true
