--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -61,8 +61,8 @@
         "express": "^4.17.3",
         "express-basic-auth": "^1.2.1",
         "express-rate-limit": "^6.9.0",
-        "flowise-components": "workspace:^",
-        "flowise-ui": "workspace:^",
+        "criai-components": "workspace:^",
+        "criai-ui": "workspace:^",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
         "moment-timezone": "^0.5.34",
