--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,9 +24,9 @@
         "@uiw/react-codemirror": "^4.21.21",
         "axios": "^0.27.2",
         "clsx": "^1.1.1",
-        "criai-embed": "*",
-        "criai-embed-react": "*",
-        "criai-react-json-view": "*",
+        "criai-chat-embed": "*",
+        "criai-chat-embed-react": "*",
+        "flowise-react-json-view": "*",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
